# xwlnest

./: configure.ac
hw/: Makefile.am
hw/xwlnest/: .gitignore  InitOutput.c  Makefile.am  xwlnest-cursor.c  xwlnest-input.c  xwlnest-output.c  xwlnest-screen.h  xwlnest-shm.c  xwlnest-shm.h  xwlnest-vidmode.c
